--- a/model_analysis_v4.rmd
+++ b/model_analysis_v4.rmd
@@ -54,24 +54,18 @@ The expectations and outcomes are described below.
 ```{r set up, echo=FALSE, warning=FALSE, message=FALSE}
 rm(list = ls())
 library(MASS)
-
 library(ggpubr)
 library(matlab)
-library(broom)
-library(ggplot2)
-
-library(tidyr)
 library(MLmetrics)
-library(readr)
-library(data.table)
 library(jsonlite)
 library(data.table)
 library(knitr)
 library(gridExtra)
 source('param_influence.R')
 library(Rmisc)
-library(dplyr)
-library(reshape2)
+library(tidyverse)
+
+
 library(magrittr)
 
 knitr::opts_chunk$set(
@@ -399,7 +393,7 @@ LTM.p.model  <- data.frame( 'subjects' = subjects[participants.fit==2],
                            's6test' = LTM.sim.dat[ind.temp.LTM[participants.fit==2],37], fix.empty.names=T)
 
 pipe.p.model <- data.frame( 'subjects' = subjects[participants.fit==3],
-                            'model' = rep('metaRL', sum(participants.fit==3)),
+                            'model' = rep('Meta-RL', sum(participants.fit==3)),
                            's3'= RL_LTMpipe.sim.dat[ind.temp.RL_LTMpipe[participants.fit==3],1:12],
                            's6'= RL_LTMpipe.sim.dat[ind.temp.RL_LTMpipe[participants.fit==3],13:24],
                             'bll' = RL_LTMpipe.sim.dat[ind.temp.RL_LTMpipe[participants.fit==3],49],
@@ -415,7 +409,7 @@ pipe.p.model <- data.frame( 'subjects' = subjects[participants.fit==3],
                            )
 
 str.p.model  <- data.frame( 'subjects' = subjects[participants.fit==4],
-                            'model' = rep('biased', sum(participants.fit==4)),
+                            'model' = rep('Biased', sum(participants.fit==4)),
                            's3'= RL_LTMstr.sim.dat[ind.temp.RL_LTMstr[participants.fit==4],1:12],
                            's6'= RL_LTMstr.sim.dat[ind.temp.RL_LTMstr[participants.fit==4],13:24],
                             'bll' = RL_LTMstr.sim.dat[ind.temp.RL_LTMstr[participants.fit==4],49],
@@ -473,24 +467,25 @@ plot.indiv <- function(this.model, title, columns) {
 #fit plots
 #participants.fit %>% 
  # hist(main='Counts of participants by model', xlab = ("1= RL; 2= LTM; 3=RL_LTM"), #lwd=4.3)
-
+mod.cols=c('#f46d43','#4d9221', '#d73027', '#2166ac')
 fit.labels <- ifelse(participants.fit==2, 'LTM', 
                      ifelse(participants.fit==3, 'meta_RL',
                             ifelse(participants.fit==4,'biased','RL')
                             )
                      )
-models.name=c('RL', 'LTM', 'meta_RL', 'biased')
+models.name=c('RL', 'LTM', 'Meta-RL', 'Biased')
 data.frame('model'= participants.fit)  %>% 
 
    ggplot(aes(factor(model), fill=factor(model))) + 
   geom_bar() +
   
-   ggtitle('Counts of participants by model') +
+   #ggtitle('Counts of participants by model') +
  # theme_minimal(base_size = 20)+
   scale_x_discrete(labels=models.name )+
   xlab("Models")+
-   scale_fill_brewer( palette = "Paired")+
-
+  ylab('Frequency')+
+   #scale_fill_brewer( palette = "Paired")+
+  scale_fill_manual( values = mod.cols) +
   theme_pubclean(base_size = 24) +
   theme(legend.position='none') 
 
@@ -600,7 +595,7 @@ geom_point() +
 
 
 ```
-Large differences in BIC values in the first 2 to 5 are critical to provide good evidence against the second and higher best fit models. Figure 5 below shows the rank ordered differencs between consecutive BIC values. The difference is highest between the first two models but the difference falls short of providing strong evidence that the best fit model is preferred over the second best fit model. 
+Large differences in BIC values in the first 2 to 5 are critical to provide good evidence against the second and higher best fit models. Figure 5 below shows the rank ordered differences between consecutive BIC values. The difference is highest between the first two models but the difference falls short of providing strong evidence that the best fit model is preferred over the second best fit model. 
 ```{r mean differences of consecutive BIC values, fig.cap = "Figure 5" }
 # The change in BIC matters: find the change in BIC for ranked models for each person and average for the 1st 100 models
  BIC.diff <-  
@@ -615,11 +610,13 @@ BIC.diff %>%
  ggplot(aes(x=factor(ind2), y=mean.diff)) + 
   geom_point() +
   geom_errorbar(aes(ymax=mean.diff+sem, ymin=mean.diff-sem)) +
-  ylab("mean differences of consecutive BIC values")+
-  xlab('index of rank ordered Ma-Mb model BICs differences') +
+  ylab("Mean differences of consecutive BIC values")+
+  xlab('ordered Mb-Ma model BIC differences') +
   geom_hline(yintercept = c(0,2,6,10), color='red') +
+  ylim(c(0,6))+
+  scale_x_discrete(labels=c("M2-M1","M3-M2", "M4-M3", "M5-M4", "M6-M5", "M7-M6", "M8-M7", "M9-M8", "M10-M9", "M11-M10"))+
 #  geom_label(y=c(2,5,10),x=c(8,8,8),label=c('weak', 'meaningful','strong') )+
-  theme_pubclean()
+  theme_pubclean(base_size = 20)
 ```
 These differences might be slightly different when broken apart by model type. Figure 6 below shows that the LTM model has higher difference than the rest of the models meaning any participant that had fit the LTM model best had had more evidence against the second best model fit compared to best-fit models for other participants. 
 ```{r BIC Diffs by model type,fig.cap = "Figure 6" }
@@ -698,41 +695,73 @@ facet_wrap(vars(model)) +
 Looking at the learning curves for the four models in Figure 4, the differences in learning rates are apparent as are other features like the separation between the two set sizes. In the plot below each data point is the average accuracy, for that number of stimulus presentations, across all parameter combinations. The LTM and RL models predict that an increase in set-size does not diminish learning rate and accuracy. But this analysis washes out the individual differences that could be captured by the diverse set of parameter combinations.  
 
 ```{r models only, fig.width=12, fig.height=12,fig.cap = "Figure 7."}
-model.ID =c(1:(nrow(RL.sim.dat) + nrow(LTM.sim.dat) +nrow(RL_LTMpipe.sim.dat) + nrow(RL_LTMstr.sim.dat)))
+model.ID <- c(1:(nrow(RL.sim.dat) + nrow(LTM.sim.dat) +nrow(RL_LTMpipe.sim.dat) + nrow(RL_LTMstr.sim.dat)))
+fix_cols <- c('model',paste0('s3_',seq(1,13,1)),paste0('s6_',seq(1,13,1)) ) %>% as.character()
 
 all.models <- rbind( 
   data.frame(
   'model' = 'RL',  
-  's3'=RL.sim.dat[,1:12], 
-  's6'=RL.sim.dat[,13:24]),
+  's3'=cbind(RL.sim.dat[,1:12], RL.sim.dat[, 25]), 
+  's6'=cbind(RL.sim.dat[,13:24],RL.sim.dat[,26])
+             ),
   data.frame(
       'model' = 'LTM',
-      's3'=LTM.sim.dat[, 1:12], 
-      's6'=LTM.sim.dat[, 13:24]),
+      's3'=cbind(LTM.sim.dat[, 1:12],LTM.sim.dat[, 25]), 
+      's6'=cbind(LTM.sim.dat[, 13:24],LTM.sim.dat[, 26])
+      ), 
   data.frame(
-      'model'='metaRL',
-      's3'=RL_LTMpipe.sim.dat[,1:12], 
-      's6'=RL_LTMpipe.sim.dat[,13:24]),
+      'model'='Meta-RL',
+      's3'=cbind(RL_LTMpipe.sim.dat[,1:12],RL_LTMpipe.sim.dat[,25]), 
+      's6'=cbind(RL_LTMpipe.sim.dat[,13:24],RL_LTMpipe.sim.dat[,26])
+      ),
   data.frame(
-      'model'='bias',
-      's3'=RL_LTMstr.sim.dat[,1:12],  
-      's6'=RL_LTMstr.sim.dat[,13:24])) %>% 
+      'model'='Biased',
+      's3'=cbind(RL_LTMstr.sim.dat[,1:12],RL_LTMstr.sim.dat[,25]),  
+      's6'=cbind(RL_LTMstr.sim.dat[,13:24],RL_LTMstr.sim.dat[,26])  
+      )
+  ) 
+colnames(all.models) <- fix_cols
+all.models.long <- 
+all.models %>% 
   cbind(model.ID) %>% 
-  reshape2::melt(id.vars=c("model.ID","model"), value.name="accuracy", variable.name="condition") 
+  pivot_longer(cols = c(-"model.ID",-"model"), values_to = 'accuracy', names_to = 'condition')
  
-
  
-models.only.plt <-   all.models %>% 
+ 
+all.models.long.plt <- 
+  all.models.long %>% 
     separate("condition", into = c( 'setSize','iteration'), convert = T) %>%   
-    unite("cond.model", c('model','setSize'), remove = FALSE) %>% 
+    unite("cond.model", c('model','setSize'), remove = FALSE, na.rm = T) 
+
+learn.mod.plt <- 
+  all.models.long.plt %>% 
+filter(iteration<13) %>% 
   summarySE(measurevar = 'accuracy', groupvars = c('model','setSize','iteration', 'cond.model')) %>% 
   ggplot(aes(as.factor(iteration),accuracy, group=cond.model,color=cond.model)) +
   geom_point(size=1.5) +
+     geom_errorbar(aes(ymin=accuracy-se, ymax=accuracy+se), width=.25, size=.75) +
   geom_line(size=1) +
-  #facet_wrap(vars(model)) +
+  facet_grid(vars(model),switch = 'both') +
   scale_color_brewer(palette = "Paired") +
-  theme_pubclean(base_size = 24) +
+  theme_pubclean(base_size = 20) +
+   theme(legend.position = 'none')+
     xlab('stimulus iteration')
+test.mod.plt <- 
+all.models.long.plt %>% 
+  filter(iteration >=12) %>% 
+  summarySE(measurevar = 'accuracy', groupvars = c('model','setSize','iteration', 'cond.model')) %>% 
+  ggplot(aes(as.factor(iteration),accuracy, group=cond.model,color=cond.model)) +
+  geom_point(size=1.5) +
+   geom_errorbar(aes(ymin=accuracy-se, ymax=accuracy+se), width=.15, size=.75) +
+  geom_line(size=1) +
+  facet_grid(vars(model),switch = 'both') +
+  scale_color_brewer(palette = "Paired") +
+  theme_pubclean(base_size = 20) +
+  scale_x_discrete(labels=c("end of learning","test"))+
+  theme(legend.position = 'none')+
+    xlab('condition')
+
+ggarrange(learn.mod.plt, test.mod.plt, ncol = 2)   
 
 if(0){
   
@@ -760,13 +789,14 @@ if(0){
    ggtitle("rate: beta estimate of first 6 iterations")
 
 }
- models.only.plt    
+ 
+
  
  #stats
-  all.models %>% 
-    separate("condition", into = c( 'setSize','iteration'), convert = T) %>%   
-    filter(iteration==12) %>% 
-  summarySE(measurevar = 'accuracy', groupvars = c('model','setSize')) %>% kable(caption = 'Descriptive statistics for models: end of learning accuracy')
+  # all.models %>% names
+  #   separate("condition", into = c( 'setSize','iteration'), convert = T) %>%   
+  #   filter(iteration==12) %>% 
+  # summarySE(measurevar = 'accuracy', groupvars = c('model','setSize')) %>% kable(caption = 'Descriptive statistics for models: end of learning accuracy')
  
 ```
  
@@ -774,7 +804,8 @@ The panels in figure 8 show the mean accuracy for participant behavioral data. T
  As we are aiming for an individual differences look at these data, collapsing across so much of this variability is uninformative, as was shown above in figure 4,especially if the differences, once fit to actual behavioral data, indicate large differences in learning outcomes or cogntive faculty diagnostics like working memory capacity. Here, only the best fitting sets of parameter combinations were selected and collapsed. As can be seen in the figure below, the different model types appear to be vastly different and some charateristics of behavioral data have come through, such as the separations of the learning trajectories for the different setsizes in the RL-LTM Biased model fit. It can also be seen that some paramter sets in the LTM model also capture the diffculty associated with increasing set size (solid lines in Fig. 8B).  The LTM participants, on average have the highest accuracies for the testing phase in both set sizes but they are nearly indistinguishable from the meta-RL group for accuracy at end of learning. The biased group shows the most separation between the set size 3 and 6 at learningand also lower accuracy at test than LTM. The biased group  is negligibly different from the meta-RL group for set size 3 but shows a marked difference at set size 6, closely following the behavioral data. 
  
 ```{r models + subjects, fig.width=12, fig.height=12, fig.cap="Figure 8." }
- melted.p.behav.model %>% 
+moded.cols=c('#f46d43','#4d9221', '#d73027', '#2166ac', '#4d9221') 
+melted.p.behav.model %>% 
    filter(iteration != 13) %>% 
   summarySE( measurevar = "accuracy", groupvars = c("iteration", "condition", "cond.model", "model")) %>% 
   ggplot(aes( as.factor(iteration), accuracy, color=cond.model, group=cond.model)) +
@@ -783,6 +814,7 @@ The panels in figure 8 show the mean accuracy for participant behavioral data. T
   geom_errorbar(aes(ymin=accuracy-se, ymax=accuracy+se), width=.35, size=1) +
   facet_wrap(vars(model)) +
   scale_color_brewer(palette = "Paired") +
+  #scale_color_manual(values = moded.cols)+
   xlab('stimulus iteration') +
  theme_pubclean(base_size = 20)  
 ```  
@@ -790,20 +822,56 @@ For reference, the group mean of all 83 subjects is shown in figure 9 below.
 ```{r subjects only, fig.width=12, fig.height=12, fig.cap='Figure 9' }
 ##--- subjects only
 
-subjects.only.plt <- melted.p.behav.model %>% 
-   filter(iteration != 13) %>% 
+subjects.only.plt <-
+  melted.p.behav.model %>% 
+   filter(iteration !=13) %>% 
   summarySE( measurevar = "accuracy", groupvars = c("iteration", "setSize")) %>% 
   ggplot(aes( as.factor(iteration), accuracy, color=setSize, group=setSize)) +
-  geom_point() +
-  geom_line(size=1) +
+  geom_point(size=2) +
+  geom_line(size=1.5) +
   geom_errorbar(aes(ymin=accuracy-se, ymax=accuracy+se), width=.35, size=1) +
  # facet_wrap(vars(model)) +
-  scale_color_brewer(palette = "Set1") +
-  xlab('stimulus iteration') +
- theme_pubclean(base_size = 24)  
+ scale_color_brewer(palette = "Set1" ) +
+  xlab('Number of Stimulus Presentations') +
+  ylab('Accuracy')+
+  ylim(c(0.2,1))+
+  ggtitle('Learning Phase')+
+  labs(color='set-size')+
+theme_pubr(legend=c('bottom' ), base_family = 'Times')+
+  theme_pubclean(base_size = 24)
+  
+  #theme(legend.title  = c('set-size'))
 
 subjects.only.plt
    
+
+
+#Figure showing end of learning and test 
+test.phase.plt <- melted.p.behav.model %>% 
+  filter(iteration <=12 & iteration>=8, type=='model') %>% 
+  group_by(subjects, setSize) %>% 
+  summarize(learn_mean=mean(accuracy)) %>% 
+  inner_join( melted.p.behav.model %>% filter(iteration ==13, type=='behav') %>% 
+  group_by(subjects, setSize) %>% 
+    summarize(test=accuracy), by=c('subjects','setSize')) %>% 
+  pivot_longer(cols = c(learn_mean, test), values_to = 'accuracy', names_to = 'condition') %>% 
+  summarySE( measurevar = "accuracy", groupvars = c("setSize", "condition")) %>% 
+  ggplot(aes( condition, accuracy, color=setSize, group=setSize)) +
+  geom_point(size=2) +
+  geom_line(size=1.5) +
+  geom_errorbar(aes(ymin=accuracy-se, ymax=accuracy+se), width=.2, size=1.5) +
+ # facet_wrap(vars(model)) +
+ scale_color_brewer(palette = "Set1" ) +
+  xlab('condition') +
+  ylab('Accuracy')+
+  ylim(c(0.7,1))+
+  ggtitle('Test Phase')+
+  labs(color='set-size')+
+theme_pubr(legend=c('bottom' ), base_family = 'Times')+
+  scale_x_discrete(labels=c("end of learning","test"))+
+  theme_pubclean(base_size = 24)
+
+ggarrange(subjects.only.plt,test.phase.plt, common.legend = T)
 ```
 
 There are five outcome measures of interest in the RLWM task: accuracy at the end learning, accuracy at test, learning rate characterized as slope estimate for the first 6 trials, the differences in learning of set 3 and set 6 and also the level of preserved learning at test for both set-sizes (test-learn). The following analyses compare the model data with behavioral data in these outcome measures. 
@@ -821,7 +889,7 @@ Figure 10 below shows accuracy at end of learning and test. The models closely t
 #------Learning and test combined
 
 
-melted.p.behav.model %>% 
+learn2test.plt<- melted.p.behav.model %>% 
   filter(iteration>=12) %>% #Grab both the 12th iteration and test
   summarySE( measurevar = "accuracy", groupvars = c( "model","cond.model", "iteration")) %>% 
    ggplot(aes(x=as.factor(iteration),weight=accuracy,ymin=accuracy-se, ymax=accuracy+se, group=cond.model,  color=cond.model)) +
@@ -833,7 +901,8 @@ melted.p.behav.model %>%
   xlab('condition') +
  theme_pubclean(base_size = 24)  +
   scale_x_discrete(labels=c("learn","test"))+
-   facet_wrap(vars(model))
+   facet_wrap(vars(model)) +
+  theme(legend.position = 'none')
   
 
 
@@ -862,48 +931,7 @@ melted.p.behav.model %>%
   
 ```
 
-```{r Learning rate 1,fig.width=12, fig.height=12}
- #------Learning rate(number of trials to 90%)
-# 
-# matcher <- function(ths){ #wrap up match function to make it easier to use with apply function
-#   return(
-#     match(TRUE, ths)
-#     )
-#   }
-# acc.level = .84
-# 
-# learning.Rate <- 
-#   cbind(subjects,
-#        "model"= p.behav.model$model, 
-#         's3_behav'= apply(sdat[,1:12]>acc.level, 1, matcher) %>% 
-#           as.numeric(),
-#         's6_behav'= apply(sdat[,13:24]>acc.level, 1, matcher) %>% 
-#           as.numeric(),
-#         's3_model'= apply(join.model.dat[,3:14]>acc.level, 1, matcher) %>% 
-#           as.numeric(),
-#         's6_model'= apply(join.model.dat[,15:26]>acc.level, 1, matcher) %>% 
-#           as.numeric()
-#         ) %>% as.data.frame() 
-# 
-#   
-#   learning.Rate %>%
-#     reshape2::melt(id.vars = c("subjects","model"), value.name="learning.rate") %>% 
-#       separate("variable", into = c('setSize','type'), remove = FALSE, convert = TRUE) %>% 
-#     dplyr::group_by(setSize, model, type) %>% 
-#     dplyr::summarise('mean'=mean(learning.rate,na.rm=T), 
-#                      'SD'= sd(learning.rate, na.rm = T),
-#                      'se'= sd(learning.rate, na.rm = T) / sqrt(sum(!is.na(learning.rate))),
-#                      'n'= sum(!is.na(learning.rate))
-#                      ) %>% 
-#     ggplot(aes(mean,x=setSize, group=type, color=type)) +
-#     #geom_histogram(stat = 'count') +
-#   geom_point(size=2)+
-#     geom_errorbar(aes(ymax=mean+se,ymin=mean-se), width=.25, size=1.5)+
-#       scale_color_brewer(palette = "Paired") +
-#    theme_pubclean(base_size = 24)+
-#     facet_wrap(vars(model))+
-#     ggtitle('rate: n trials to 85%')
-```
+
 The models predict learning rate for set size 3 for most of the models (not in the explicit biased model, too few data points in RL to say). But the models predicted learing rate for s6 only in the biased model. See figure 11 below. 
 
 ```{r alternative learning rate,fig.width=12, fig.height=12, fig.cap='Figure 11.'}
@@ -917,7 +945,8 @@ fit.lr <-  melted.p.behav.model %>%
           as_data_frame()) %>% 
    cbind('estimate.type'= rep(c('y-int','slope'), 83*2*2)) 
  
-  fit.lr %>% 
+ fit.lr.plt <- 
+   fit.lr %>% 
    filter(estimate.type=='slope') %>% 
    group_by(setSize,type, model) %>%
    dplyr::summarize('mean'= mean(estimate),
@@ -930,17 +959,19 @@ fit.lr <-  melted.p.behav.model %>%
    theme_pubclean(base_size = 24)+
     facet_wrap(vars(model)) +
    ylab("slope") +
-   ggtitle("learning rate: slope estimate of first 6 iterations")
+    xlab('set-size')+
+   theme(legend.position = 'none')
+  # ggtitle("learning rate: slope fit to first 6 presentations")
    
  
   
  #Some stats for report
  
- # fit.lr %>% 
- #   dplyr::filter(type=='behav', estimate.type=='slope') %>% 
- #   select(setSize, estimate) %>% 
- #   group_by(setSize) %>% summarize(mean(estimate), median(estimate)) %>% kable(caption = 'mean and median of slope for behavioral data by set-size')
- 
+ fit.lr %>%
+   dplyr::filter(type=='behav', estimate.type=='slope') %>%
+   select(setSize, estimate) %>%
+   group_by(setSize) %>% summarize(mean(estimate), median(estimate)) %>% kable(caption = 'mean and median of slope for behavioral data by set-size')
+
  #Histograms here show near normal distribution so t-tests are ok to do. 
  # fit.lr %>% 
  #   dplyr::filter(type=='behav', estimate.type=='slope') %>% 
@@ -974,14 +1005,16 @@ fit.lr %>%
    #                 'mean_diff'= mean(s3) - mean(s6)
    #                 ) %>% kable()
    
-   # stat: normally done by model type.
-   #  fit.lr %>% 
-   #   ungroup() %>% 
-   # filter(estimate.type=='slope', type=='model', model=='LTM') %>% 
-   #    select(estimate,model,setSize) %>% 
-   #    #ggplot(aes(estimate, fill=setSize)) +
-   #    #geom_density(alpha=.4)
-   #   wilcox.test(estimate ~ setSize, data = .) 
+  # stat: normally done by model type.
+    fit.lr %>%
+     ungroup() %>%
+   filter(estimate.type=='slope',model!='RL') %>%
+      select(estimate,model,setSize,type) %>%
+      #ggplot(aes(estimate, fill=setSize)) +
+      #geom_density(alpha=.4)
+      lm(estimate ~ type*model,data=.) %>% anova
+    
+     wilcox.test(estimate ~ type, data = .)
    
    
 ```
@@ -993,26 +1026,32 @@ fit.lr %>%
     melted.p.behav.model %>% 
      filter(iteration!=13) %>% # get everything but test , type=='behav'
     select(c('subjects','model', 'accuracy','iteration', 'setSize', 'type')) %>% 
-   reshape2::dcast(setSize ~ iteration + subjects + model + type , value.var = 'accuracy') %>% #change in to wide form to subrtract b/n s3 and s6
-   select(-setSize) %>% #not needed
-    as.matrix() %>% #required to use diff() function
-  diff.default() %>% #take the difference b/n the set sizes
- #  abs() %>% #take the absolute value (I guess it doesn't matter if s3 is higher than s6 or viceversa)
-    reshape2::melt() %>%  
-    select(-Var1) %>% 
-      separate("Var2", into = c('iteration', "subjects","model","type"), remove = T, convert = TRUE) %>% 
-    summarySE(measurevar = "value", groupvars = c("subjects", "model", "type")) %>% 
-    select(subjects,type, model,"learnDiff"= value) 
+  pivot_wider(names_from = setSize, values_from = accuracy) %>% 
+  mutate('learnDiff' = s6-s3)
+  
+  
+  
+ #   reshape2::dcast(setSize ~ iteration + subjects + model + type , value.var = 'accuracy') %>% #change in to wide form to subrtract b/n s3 and s6
+ #   select(-setSize) %>% #not needed
+ #    as.matrix() %>% #required to use diff() function
+ #  diff.default() %>% #take the difference b/n the set sizes
+ # #  abs() %>% #take the absolute value (I guess it doesn't matter if s3 is higher than s6 or viceversa)
+ #    reshape2::melt() %>%  
+ #    select(-Var1) %>% 
+ #      separate("Var2", into = c('iteration', "subjects","model","type"), remove = T, convert = TRUE) %>% 
+ #    summarySE(measurevar = "value", groupvars = c("subjects", "model", "type")) %>% 
+ #    select(subjects,type, model,"learnDiff"= value) 
 
- s3s6Diff %>% 
+ s3s6Diff.plt <- s3s6Diff %>% 
   summarySE(measurevar = 'learnDiff', groupvars = c('model','type')) %>% 
   ggplot(aes(model, learnDiff, group=type, color=type)) + 
       geom_point(size=2) + 
       geom_errorbar(aes(ymax=learnDiff+se, ymin=learnDiff-se), size=1.5,width=.25) +
       theme_pubclean(base_size = 24) +
-      ggtitle("separation of the learning curves")+
+      #ggtitle("separation of the learning curves")+
         scale_color_brewer(palette = "Paired") +
-  ylab('mean difference') 
+  ylab('mean difference') +
+   theme(legend.position = 'none')
      
   # ylim(c(0,.3))
   #--stats
@@ -1022,9 +1061,53 @@ fit.lr %>%
 #   geom_density(alpha=.4) +
 #   facet_wrap(vars(model))
 # These don't look like normal distros
-
 s3s6Diff %>% 
-  filter(type=='behav') %>% 
+  group_by(subjects,model, type) %>% 
+ summarize(diff.mean = mean(learnDiff)) %>% 
+  filter(model!='RL') %>% 
+   lm(diff.mean ~ model*type, data=. ) %>%
+  anova()
+  broom::tidy() 
+ 
+  s3s6Diff %>% 
+  group_by(subjects,model, type) %>% 
+ summarize(diff.mean = mean(learnDiff)) %>% 
+  filter(model=='Meta-RL', type=='model') %$% 
+    wilcox.test(diff.mean, mu=0)
+    
+  s3s6Diff %>% 
+  group_by(subjects,model, type) %>% 
+ summarize(diff.mean = mean(learnDiff)) %>% 
+  filter(model=='Biased', type=='model') %$% 
+    wilcox.test(diff.mean, mu=0)
+ 
+  s3s6Diff %>% 
+  group_by(subjects,model, type) %>% 
+ summarize(diff.mean = mean(learnDiff)) %>% 
+  filter(model=='LTM', type=='model') %$% 
+    wilcox.test(diff.mean, mu=0)
+  
+   s3s6Diff %>% 
+  group_by(subjects,model, type) %>% 
+ summarize(diff.mean = mean(learnDiff)) %>% 
+  filter(model!='RL') %$% 
+    kruskal.test(diff.mean, type)
+   
+s3s6Diff %>% 
+  group_by(subjects,model, type) %>% 
+ summarize(diff.mean = mean(learnDiff)) %>% 
+  filter(model!='RL', type=='behav') %>% 
+  select(diff.mean,model)%$%
+    pairwise.wilcox.test(diff.mean,model,p.adjust.method = 'bonferroni', data=.) %>% 
+      broom::tidy()
+  
+  
+  
+  
+  
+ 
+s3s6Diff %>% 
+  filter(type=='behav', model!='RL') %>% 
   kruskal.test(learnDiff ~ model, data=. ) %>% 
   broom::tidy() %>% 
   kable(caption = 'K-W test one way rank-sum test: s6-s3 learning curve differences by model type for behavioral data')
@@ -1059,25 +1142,20 @@ pairwise.t.test(learnDiff,model, p.adjust.method = 'bonferroni', exact=FALSE) %>
    learnTestDiff <- 
      melted.p.behav.model %>% 
        filter( iteration>= 12) %>% 
-        select(c('subjects','model', 'accuracy','iteration', 'setSize','type')) %>% 
-       reshape2::dcast(iteration ~ setSize + subjects + model + type, value.var = 'accuracy') %>% 
-      select(-iteration) %>% #not needed
-    as.matrix() %>% #required to use diff() function
-  diff.default() %>% 
-  # abs() %>%#take the difference b/n the learn and test
-    reshape2::melt() %>% 
-       select(-Var1) %>% 
-      separate("Var2", into = c('setSize', "subjects","model","type"), remove = T, convert = TRUE)
- 
+        select(c('subjects','model', 'accuracy','iteration', 'setSize','type', cond.model)) %>% 
+   pivot_wider(names_from = iteration, values_from = accuracy) %>% 
+  mutate('test_learn' = `13`-`12`) 
+  
+  
+   
+   learn_test.plt <-   
      learnTestDiff  %>% 
-      unite("cond.model", c(setSize,type), remove = FALSE) %>% 
-    summarySE(measurevar = "value", groupvars = c( "model", "cond.model")) %>% 
-      
-  ggplot(aes(model, value, color=cond.model, group=cond.model)) + 
+    summarySE(measurevar = "test_learn", groupvars = c( "model", "cond.model")) %>% 
+  ggplot(aes(model, test_learn, color=cond.model, group=cond.model)) + 
       geom_point(position=position_dodge(width = 0.4),size=2) + 
-      geom_errorbar(position=position_dodge(width = 0.4),aes(ymax=value+se, ymin=value-se), size=1,width=.75) +
+      geom_errorbar(position=position_dodge(width = 0.4),aes(ymax=test_learn+se, ymin=test_learn-se), size=1,width=.75) +
       theme_pubclean(base_size = 24) +
-      ggtitle("Change from training to test: test - learn")+
+    #  ggtitle("change from learning to test: test - learn")+
         scale_color_brewer(palette = "Paired") +
       theme(legend.position = 'none')+
       ylab("mean difference")
@@ -1085,10 +1163,17 @@ pairwise.t.test(learnDiff,model, p.adjust.method = 'bonferroni', exact=FALSE) %>
    
   learnTestDiff %>% 
     filter(model!='RL') %>% 
-    lm(value ~ setSize * type * model, data=.) %>% 
+    lm(test_learn ~ setSize * type * model, data=.) %>% 
     anova() %>% 
     broom::tidy() %>% 
     kable(caption = '(2)set-size x (2)type(modelorBehav data) x 3(model) anova. RL excluded.')
+```
+
+```{r learing features panel plot}
+ggarrange(s3s6Diff.plt,learn_test.plt,
+          fit.lr.plt, learn2test.plt, 
+          labels = 'AUTO', nrow = 2, ncol = 2, 
+          align = "hv", font.label = list(size=20))
 ```
 
 It is difficult to assess what the model fits are capturing without examining the specific paramter sets more carefully or deducing if membership in a particular model group predicts some other cognitve or learning aspects of the subjects.A summary of the parameter data follows.  
@@ -1099,6 +1184,17 @@ First, for the cohort of subjects
 Parameter summary: what is the spread of the parameters across participants in the models?
 ```{r summarize extracted parameters, fig.cap="Figure 14."}
 
+#parameter correlations
+p.behav.model %>% 
+  #filt
+  select('alpha','egs','bll','imag','ans','bias') %>% 
+  mutate('learning.rate'=alpha,
+         'RL.noise'=egs, 
+         'LTM.decay'=bll,
+         'attention.WM' =imag,
+         'LTM.noise'=ans,
+         'bias'=bias,.keep='none' ) %>% GGally::ggpairs() +
+  theme_bw()
 
 param.spread <- 
   p.behav.model %>% 
@@ -1402,16 +1498,18 @@ simsRL_LTMpipe$data %>%
  
    ggplot(aes(y=mean, x=factor(param_value),color=setsize, group=setsize)) +
   geom_point() +
-  geom_errorbar(aes(ymin=mean-sem, ymax=mean+sem )) +
+  geom_errorbar(aes(ymin=mean-sem, ymax=mean+sem),width=.8, size=1) +
   #geom_jitter(width=0, height = .02) +
  # geom_smooth()+
-  theme_linedraw() +
+ geom_line(size=1.2 )+
   scale_color_brewer(palette = 'Set1') +
   scale_x_discrete(labels=c('low','','','','','','','','','high'))+
   xlab('parameter value') +
-  ylab('mean proportion RL used')+
+  ylab('mean proportion of RL use')+
  # geom_smooth(method = 'lm', alpha=.2)+
-  facet_wrap(vars(parameter))
+  facet_wrap(vars(parameter)) +
+  theme_pubclean(base_size = 24)
+  # theme_linedraw(base_size = 24) 
   
 ```
 <!-- 
@@ -1514,59 +1612,59 @@ Some more specific things to test might be effect of delay between stimulus pres
 
 These plots show group effects for uCLIMB subjects only in python and OLCTS measures and behavioral predictors. 
 ```{r import uCLIMB data}
-# uclimb <- read.csv("RLWM_data/python_olcts_uclimb_summary_noEEG_092320.csv", header = T)
-# uclimb.model.temp1 <- uclimb %>%  merge(p.behav.model, by = "subjects") 
-# uclimb.model.dat <-  cbind(uclimb.model.temp1, 'wmComposite'= uclimb.model.temp1[,c("RspanScore", "SspanAbsoluteScore","OspanAbsoluteScore") ] %>% rowMeans())
-# 
-# #specific goals are to compare to:
-# #1 learning rate in language 
-# #2 Learning rate in Python
-# #3 Post-test Python
-# #4 Post-test Language
-# #5 WM composite score
-# #6 RAvens
-# #7 PSS measures
-# uclimb.model.dat %>% 
-#   select("MLAT_Total", "Ravens.Score","NDV", "wmComposite","RspanTotal", "PSS_ChooseA.ACC" , "PSS_AvoidB.ACC", "PSS_All.ACC" ) %>%
-#   scale(center = F)  %>% 
-#   data.frame('model'=uclimb.model.dat$model) %>% 
-#   reshape2::melt() %>% 
-#   summarySE(groupvars = c("model","variable" ), measurevar = "value") %>% 
-#   ggplot(aes(model, value, group=model,fill=model))+
-#   geom_bar(stat = "identity", position = "dodge") +
-#    geom_errorbar(aes(ymin=value-se, ymax=value+se), width=.25, size=.75)+
-#  theme_pubr(base_size = 16)+
-#   facet_wrap(vars(variable))
-# 
-#   # Python only
-# uclimb.python <- read.csv("RLWM_data/python_uclimb_summary_noEEG_092320.csv", header = T)
-# uclimb.python.temp1 <-  uclimb.python %>%  merge(p.behav.model, by = "subjects") 
-# 
-# python.LR <- read.delim("RLWM_data/SlopeCoefficients_UpTo10_python20181222.txt", sep="\t", header = T)
-# 
-# uclimb.python.dat <- uclimb.python.temp1 %>% 
-#   merge(python.LR, by="subjects")    
-# 
-# uclimb.python.dat %>% 
-#   select( "PostTest_Total_ACC","python.learning.coeff","PT_Syntax_ACC" ,"PT_Semantics_ACC","RPS.Code") %>%
-#   scale(center = F)  %>% 
-#   data.frame('model'=uclimb.python.dat$model) %>% 
-#   reshape2::melt() %>% 
-#   summarySE(groupvars = c("model","variable" ), measurevar = "value") %>% 
-#   ggplot(aes(model, value, group=model,fill=model))+
-#   geom_bar(stat = "identity", position = "dodge") +
-#    geom_errorbar(aes(ymin=value-se, ymax=value+se), width=.25, size=.75)+
-#  theme_pubr(base_size = 16)+
-#   facet_wrap(vars(variable))
-# 
-# 
-# #combined Python and OLCTS measures
-# #learning rate
-# # "Slope_OLCTS" and python learning rate
-# # syntax 
-# # "PT_Syntax_ACC_Python" and "GR_Total_OLCTS"
-# # vocab
-# #PT_Vocab_OLCTS and "PT_Semantics_ACC_Python" 
+uclimb <- read_csv("RLWM_data/python_olcts_uclimb_summary_noEEG_092320.csv")
+uclimb.model.temp1 <- uclimb %>%  merge(p.behav.model, by = "subjects")
+uclimb.model.dat <-  cbind(uclimb.model.temp1, 'wmComposite'= uclimb.model.temp1[,c("RspanScore", "SspanAbsoluteScore","OspanAbsoluteScore") ] %>% rowMeans()) %>% as_tibble()
+
+#specific goals are to compare to:
+#1 learning rate in language
+#2 Learning rate in Python
+#3 Post-test Python
+#4 Post-test Language
+#5 WM composite score
+#6 RAvens
+#7 PSS measures
+uclimb.model.dat %>%
+  dplyr::select('MLAT_Total', `Ravens Score`,"NDV", "wmComposite","RspanTotal", "PSS_ChooseA.ACC" , "PSS_AvoidB.ACC", "PSS_All.ACC" ) %>%
+  scale(center = F)  %>%
+  data.frame('model'=uclimb.model.dat$model) %>%
+  reshape2::melt() %>%
+  summarySE(groupvars = c("model","variable" ), measurevar = "value") %>%
+  ggplot(aes(model, value, group=model,fill=model))+
+  geom_bar(stat = "identity", position = "dodge") +
+   geom_errorbar(aes(ymin=value-se, ymax=value+se), width=.25, size=.75)+
+ theme_pubr(base_size = 16)+
+  facet_wrap(vars(variable))
+
+  # Python only
+uclimb.python <- read.csv("RLWM_data/python_uclimb_summary_noEEG_092320.csv", header = T)
+uclimb.python.temp1 <-  uclimb.python %>%  merge(p.behav.model, by = "subjects")
+
+python.LR <- read.delim("RLWM_data/SlopeCoefficients_UpTo10_python20181222.txt", sep="\t", header = T)
+
+uclimb.python.dat <- uclimb.python.temp1 %>%
+  merge(python.LR, by="subjects")
+
+uclimb.python.dat %>%
+  dplyr::select( "PostTest_Total_ACC","python.learning.coeff","PT_Syntax_ACC" ,"PT_Semantics_ACC","RPS.Code") %>%
+  scale(center = F)  %>%
+  data.frame('model'=uclimb.python.dat$model) %>%
+  reshape2::melt() %>%
+  summarySE(groupvars = c("model","variable" ), measurevar = "value") %>%
+  ggplot(aes(model, value, group=model,fill=model))+
+  geom_bar(stat = "identity", position = "dodge") +
+   geom_errorbar(aes(ymin=value-se, ymax=value+se), width=.25, size=.75)+
+ theme_pubr(base_size = 16)+
+  facet_wrap(vars(variable))
+
+
+#combined Python and OLCTS measures
+#learning rate
+# "Slope_OLCTS" and python learning rate
+# syntax
+# "PT_Syntax_ACC_Python" and "GR_Total_OLCTS"
+# vocab
+#PT_Vocab_OLCTS and "PT_Semantics_ACC_Python"
 
 ```
 
